video height setup

--- a/about.html
+++ b/about.html
@@ -237,7 +237,7 @@
         <div class="row text-row">
             <div class="col-lg-8 offset-lg-2">
                 <div class="video-wrap">
-                    <video loop muted src="media/video_1080p.mp4"></video>
+                    <video loop muted controls="controls"  src="media/inter-convert-video-online.com_.mp4"></video>
                 </div>
                 <h2>ЧАО «Интеркондиционер» - предприятие новой Украины, является крупнейшим производителем кондиционеров, систем промышленной вентиляции и кондиционирования,
                     дымоудаления,
