--- a/contacts.html
+++ b/contacts.html
@@ -81,8 +81,8 @@
                             </div>
                             <div class="download-file">
                                 <div>   Прикрепить фаил
-                                    <input id="file" type="file" multiple>
-                                    <label for="file">
+                                    <input id="file-upload" type="file" multiple>
+                                    <label for="file-upload">
                                     </label>
                                 </div>
                                 <div>
